--- a/package.json
+++ b/package.json
@@ -1,95 +1,98 @@
 {
-  "name": "track-o-ts",
-  "version": "1.0.0",
-  "private": true,
-  "author": "xiltyn",
-  "description": "Live initiative tracker app for Tabletop RPGs",
-  "main": "main.tsx",
-  "scripts": {
-    "setup": "yarn install && echo \"\\x1b[101m\\x1b[97m <|::===== Check out README for more cool things that come with this boilerplate =====:|> \\x1b[0m\"",
-    "start": "webpack-dev-server --mode development --hot --progress --color --port 8080 --open",
-    "build": "webpack -p --progress --colors",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:update": "jest -u",
-    "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@types/classnames": "2.2.6",
-    "@types/enzyme": "^3.1.14",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/history": "4.7.1",
-    "@types/jest": "^23.3.7",
-    "@types/node": "10.11.7",
-    "@types/react": "16.4.16",
-    "@types/react-dom": "16.0.9",
-    "@types/react-redux": "6.0.9",
-    "@types/react-router": "4.0.32",
-    "@types/react-router-redux": "5.0.16",
-    "@types/redux-actions": "2.3.1",
-    "@types/redux-form": "^7.4.11",
-    "@types/redux-mock-store": "^1.0.0",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/webpack": "4.4.16",
-    "@types/webpack-env": "1.13.6",
-    "axios": "0.18.0",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "enzyme-to-json": "^3.3.4",
-    "file-loader": "^2.0.0",
-    "html-loader": "^1.0.0-alpha.0",
-    "html-webpack-plugin": "^4.0.0-alpha",
-    "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.4",
-    "postcss": "^7.0.5",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-import": "^12.0.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.1.1",
-    "postcss-reporter": "^6.0.0",
-    "postcss-url": "^8.0.0",
-    "react-docgen-typescript": "^1.11.0",
-    "react-hot-loader": "^4.3.11",
-    "react-styleguidist": "^8.0.0",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "style-loader": "^0.23.1",
-    "ts-jest": "^23.10.4",
-    "ts-loader": "^5.2.2",
-    "tslint": "^5.11.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
-    "tslint-webpack-plugin": "^1.2.2",
-    "typescript": "^3.1.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.20.2",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
-  },
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "global": "^4.3.2",
-    "node-sass": "^4.9.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-pose": "^3.3.7",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.1",
-    "redux-form": "^7.4.2",
-    "sails.io.js": "^1.2.1",
-    "sass-loader": "^7.1.0",
-    "socket.io-client": "^2.1.1"
-  }
+    "name": "track-o-ts",
+    "version": "1.0.0",
+    "private": true,
+    "author": "xiltyn",
+    "description": "Live initiative tracker app for Tabletop RPGs",
+    "main": "main.tsx",
+    "scripts": {
+        "setup": "yarn install && echo \"\\x1b[101m\\x1b[97m <|::===== Check out README for more cool things that come with this boilerplate =====:|> \\x1b[0m\"",
+        "start": "webpack-dev-server --mode development --hot --progress --color --port 8080 --open",
+        "build": "webpack -p --progress --colors",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:update": "jest -u",
+        "styleguide": "styleguidist server",
+        "styleguide:build": "styleguidist build"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.1.2",
+        "@types/classnames": "2.2.6",
+        "@types/enzyme": "^3.1.14",
+        "@types/enzyme-adapter-react-16": "^1.0.3",
+        "@types/firebase": "^3.2.1",
+        "@types/history": "4.7.1",
+        "@types/jest": "^23.3.7",
+        "@types/node": "10.11.7",
+        "@types/react": "16.4.16",
+        "@types/react-dom": "16.0.9",
+        "@types/react-redux": "6.0.9",
+        "@types/react-router": "4.0.32",
+        "@types/react-router-redux": "5.0.16",
+        "@types/redux-actions": "2.3.1",
+        "@types/redux-form": "^7.4.11",
+        "@types/redux-mock-store": "^1.0.0",
+        "@types/socket.io-client": "^1.4.32",
+        "@types/webpack": "4.4.16",
+        "@types/webpack-env": "1.13.6",
+        "axios": "0.18.0",
+        "babel-loader": "^8.0.4",
+        "css-loader": "^1.0.0",
+        "enzyme": "^3.7.0",
+        "enzyme-adapter-react-16": "^1.6.0",
+        "enzyme-to-json": "^3.3.4",
+        "file-loader": "^2.0.0",
+        "html-loader": "^1.0.0-alpha.0",
+        "html-webpack-plugin": "^4.0.0-alpha",
+        "jest": "^23.6.0",
+        "mini-css-extract-plugin": "^0.4.4",
+        "postcss": "^7.0.5",
+        "postcss-browser-reporter": "^0.5.0",
+        "postcss-import": "^12.0.0",
+        "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.1.1",
+        "postcss-reporter": "^6.0.0",
+        "postcss-url": "^8.0.0",
+        "react-docgen-typescript": "^1.11.0",
+        "react-hot-loader": "^4.3.11",
+        "react-styleguidist": "^8.0.0",
+        "redux-devtools-extension": "^2.13.5",
+        "redux-mock-store": "^1.5.3",
+        "redux-thunk": "^2.3.0",
+        "style-loader": "^0.23.1",
+        "ts-jest": "^23.10.4",
+        "ts-loader": "^5.2.2",
+        "tslint": "^5.11.0",
+        "tslint-eslint-rules": "^5.4.0",
+        "tslint-react": "^3.6.0",
+        "tslint-webpack-plugin": "^1.2.2",
+        "typescript": "^3.1.3",
+        "url-loader": "^1.1.2",
+        "webpack": "^4.20.2",
+        "webpack-bundle-analyzer": "^3.0.3",
+        "webpack-cleanup-plugin": "^0.5.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.9"
+    },
+    "dependencies": {
+        "@firebase/app-types": "^0.3.2",
+        "classnames": "^2.2.6",
+        "extract-text-webpack-plugin": "4.0.0-beta.0",
+        "firebase": "^5.5.7",
+        "global": "^4.3.2",
+        "node-sass": "^4.9.4",
+        "react": "^16.5.2",
+        "react-dom": "^16.5.2",
+        "react-pose": "^3.3.7",
+        "react-redux": "^5.0.7",
+        "react-router": "^4.3.1",
+        "react-router-redux": "^5.0.0-alpha.9",
+        "redux": "^4.0.1",
+        "redux-actions": "^2.6.1",
+        "redux-form": "^7.4.2",
+        "sails.io.js": "^1.2.1",
+        "sass-loader": "^7.1.0",
+        "socket.io-client": "^2.1.1"
+    }
 }
