--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/react-redux": "6.0.9",
         "@types/react-router": "4.0.32",
         "@types/react-router-redux": "5.0.16",
+        "@types/react-widgets": "^4.2.0",
         "@types/redux-actions": "2.3.1",
         "@types/redux-form": "^7.4.11",
         "@types/redux-mock-store": "^1.0.0",
@@ -88,6 +89,8 @@
         "react-redux": "^5.0.7",
         "react-router": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
+        "react-widgets": "^4.4.7",
+        "react-widgets-simple-number": "^4.1.19",
         "redux": "^4.0.1",
         "redux-actions": "^2.6.1",
         "redux-form": "^7.4.2",
