setup characters view | TODO character edition

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@types/react-redux": "6.0.9",
         "@types/react-router": "4.0.32",
         "@types/react-router-redux": "5.0.16",
+        "@types/react-svg": "^5.0.0",
         "@types/react-widgets": "^4.2.0",
         "@types/redux-actions": "2.3.1",
         "@types/redux-form": "^7.4.11",
@@ -90,6 +91,7 @@
         "react-redux": "^5.0.7",
         "react-router": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
+        "react-svg": "^7.2.7",
         "react-widgets": "^4.4.7",
         "react-widgets-simple-number": "^4.1.19",
         "redux": "^4.0.1",
