--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "react-redux": "^5.0.7",
         "react-router": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
+        "react-spring": "^8.0.14",
         "react-svg": "^7.2.7",
         "react-widgets": "^4.4.7",
         "react-widgets-simple-number": "^4.1.19",
