--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/firebase": "^3.2.1",
         "@types/history": "4.7.1",
         "@types/jest": "^23.3.7",
+        "@types/lodash": "^4.14.123",
         "@types/node": "10.11.7",
         "@types/react": "16.4.16",
         "@types/react-dom": "16.0.9",
@@ -37,6 +38,7 @@
         "@types/redux-form": "^7.4.11",
         "@types/redux-mock-store": "^1.0.0",
         "@types/socket.io-client": "^1.4.32",
+        "@types/uuid": "^3.4.4",
         "@types/webpack": "4.4.16",
         "@types/webpack-env": "1.13.6",
         "axios": "0.18.0",
@@ -84,6 +86,7 @@
         "extract-text-webpack-plugin": "4.0.0-beta.0",
         "firebase": "^5.5.7",
         "global": "^4.3.2",
+        "lodash": "^4.17.11",
         "node-sass": "^4.9.4",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
@@ -100,6 +103,7 @@
         "redux-form": "^7.4.2",
         "sails.io.js": "^1.2.1",
         "sass-loader": "^7.1.0",
-        "socket.io-client": "^2.1.1"
+        "socket.io-client": "^2.1.1",
+        "uuid": "^3.3.2"
     }
 }
