--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "node-sass": "^4.9.4",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
+        "react-html-parser": "^2.0.2",
         "react-pose": "^3.3.7",
         "react-redux": "^5.0.7",
         "react-router": "^4.3.1",
